# The_Masters_IE_Google_Hackathon

./: .gitignore  CLAUDE.md  README.md  algorithem_example.py  main.py  main.spec  main_windows.spec  pyproject.toml
.github/workflows/: build.yml
game/: config.py
game/engine/: engine.py  state.py
game/gaze_providers/: base.py  mediapipe_gaze.py  mouse_gaze.py
game/renderer/: base.py  pyqt_renderer.py
