[project]
name = "eye-tracking-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "keyboard>=0.13.5",
    "mediapipe==0.10.9",
    "numpy>=2.0.2",
    "opencv-python>=4.13.0.92",
    "pyautogui>=0.9.54",
    "pyopengl>=3.1.10",
    "pyqt5>=5.15.11",
    "scipy>=1.13.1",
]
